refactor: Update handling of app config to use signals
app config is now provided directly as a Signal via the APP_CONFIG injection token.
Updated code to use computed signals for accessing config values.

--- a/src/app/core/admin/user/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user/list-users/admin-list-users.component.html
@@ -136,7 +136,7 @@
 								>
 									Edit
 								</a>
-								@if (allowDeleteUser$ | async) {
+								@if (allowDeleteUser()) {
 									<button
 										class="dropdown-item"
 										cdkMenuItem
