--- a/src/app/core/feedback/feedback-modal/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal/feedback-modal.component.html
@@ -135,7 +135,7 @@
 		}
 
 		<ng-template #textInput>
-			@if (classificationOptions) {
+			@if (classificationOptions().length > 0) {
 				<div class="form-group pt-2">
 					<ng-select
 						name="classification"
@@ -145,7 +145,7 @@
 						required
 						[(ngModel)]="feedback.classification"
 						[clearable]="false"
-						[items]="classificationOptions"
+						[items]="classificationOptions()"
 					>
 					</ng-select>
 				</div>
