--- a/src/app/core/admin/user/manage-user/manage-user.component.html
+++ b/src/app/core/admin/user/manage-user/manage-user.component.html
@@ -36,7 +36,7 @@
 					type="text"
 					required
 					[(ngModel)]="user.name"
-					[disabled]="metadataLocked"
+					[disabled]="metadataLocked()"
 				/>
 			</div>
 			<!-- Username -->
@@ -49,7 +49,7 @@
 					type="text"
 					required
 					[(ngModel)]="user.username"
-					[disabled]="metadataLocked"
+					[disabled]="metadataLocked()"
 				/>
 			</div>
 			<!-- Organization -->
@@ -62,7 +62,7 @@
 					type="text"
 					required
 					[(ngModel)]="user.organization"
-					[disabled]="metadataLocked"
+					[disabled]="metadataLocked()"
 				/>
 			</div>
 			<!-- Email -->
@@ -75,11 +75,11 @@
 					type="email"
 					required
 					[(ngModel)]="user.email"
-					[disabled]="metadataLocked"
+					[disabled]="metadataLocked()"
 				/>
 			</div>
 			<!-- Local Login Information -->
-			@if (!proxyPki) {
+			@if (!proxyPki()) {
 				<h2 class="pt-3">
 					Password
 					<small>
@@ -122,7 +122,7 @@
 				</div>
 			}
 			<!-- PKI Information -->
-			@if (proxyPki) {
+			@if (proxyPki()) {
 				<!-- Bypass Access Checker -->
 				<div class="form-group">
 					<label>Access Check</label>
