fix: correct rendering of api docs link in navbar

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -269,7 +269,7 @@
 						@if (showApiDocsLink()) {
 							<a
 								class="dropdown-item"
-								[href]="apiDocsLink"
+								[href]="apiDocsLink()"
 								cdkMenuItem
 								target="_blank"
 							>
