--- a/src/app/core/teams/create-team/create-team.component.html
+++ b/src/app/core/teams/create-team/create-team.component.html
@@ -35,7 +35,7 @@
 		</div>
 
 		<!-- Team Admin -->
-		@if (isAdmin) {
+		@if (isAdmin()) {
 			<div class="form-group">
 				<label class="form-required">Team Admin</label>
 				<ng-select
