--- a/src/app/core/teams/view-team/view-team.component.html
+++ b/src/app/core/teams/view-team/view-team.component.html
@@ -1,41 +1,37 @@
-@if (team) {
-	<section class="view-team-container">
-		<!-- Alert Notifications -->
-		<system-alert></system-alert>
-		<!-- Show a breadcrumb to the list teams page -->
-		<div class="mb-3">
-			<a class="back-link mb-1" routerLink="/team">
-				<span class="fa-solid fa-angle-double-left"></span> Back to Teams
-			</a>
-		</div>
-		<div class="d-flex mb-3">
-			<h1>{{ team.name }}</h1>
-			<button
-				class="btn btn-link ml-auto"
-				type="button"
-				*hasTeamRole="team; role: 'admin'"
-				(click)="remove(team)"
-			>
-				Delete Team
-			</button>
-		</div>
-		<ul class="nav nav-tabs">
-			@for (topic of topics; track topic) {
-				<li class="nav-item" role="presentation">
-					<a
-						class="nav-link"
-						routerLinkActive="active"
-						[routerLink]="['/team/', team._id, topic.path]"
-					>
-						{{ topic.title }}
-					</a>
-				</li>
-			}
-		</ul>
-		<div class="view-team-section-container">
-			<router-outlet></router-outlet>
-		</div>
-	</section>
-} @else {
-	Error: Team not found
-}
+<section class="view-team-container">
+	<!-- Alert Notifications -->
+	<system-alert></system-alert>
+	<!-- Show a breadcrumb to the list teams page -->
+	<div class="mb-3">
+		<a class="back-link mb-1" routerLink="/team">
+			<span class="fa-solid fa-angle-double-left"></span> Back to Teams
+		</a>
+	</div>
+	<div class="d-flex mb-3">
+		<h1>{{ team().name }}</h1>
+		<button
+			class="btn btn-link ml-auto"
+			type="button"
+			*hasTeamRole="team(); role: 'admin'"
+			(click)="remove(team())"
+		>
+			Delete Team
+		</button>
+	</div>
+	<ul class="nav nav-tabs">
+		@for (topic of topics; track topic) {
+			<li class="nav-item" role="presentation">
+				<a
+					class="nav-link"
+					routerLinkActive="active"
+					[routerLink]="['/team/', team()._id, topic.path]"
+				>
+					{{ topic.title }}
+				</a>
+			</li>
+		}
+	</ul>
+	<div class="view-team-section-container">
+		<router-outlet></router-outlet>
+	</div>
+</section>
