refactor: Initial pass at updating to use signals where appropriate

--- a/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
@@ -121,8 +121,8 @@
 					</td>
 				</ng-container>
 
-				<tr cdk-header-row *cdkHeaderRowDef="displayedColumns; sticky: true"></tr>
-				<tr cdk-row *cdkRowDef="let team; columns: displayedColumns"></tr>
+				<tr cdk-header-row *cdkHeaderRowDef="displayedColumns(); sticky: true"></tr>
+				<tr cdk-row *cdkRowDef="let team; columns: displayedColumns()"></tr>
 			</table>
 
 			<asy-table-empty-state
