--- a/src/app/core/admin/feedback/list-feedback/admin-list-feedback.component.html
+++ b/src/app/core/admin/feedback/list-feedback/admin-list-feedback.component.html
@@ -184,7 +184,7 @@
 								>
 									None
 								</button>
-								@for (username of assigneeUsernames; track username) {
+								@for (username of assigneeUsernames(); track username) {
 									<button
 										class="dropdown-item"
 										cdkMenuItem
@@ -199,8 +199,8 @@
 						</ng-template>
 					</td>
 				</ng-container>
-				<tr cdk-header-row *cdkHeaderRowDef="displayedColumns; sticky: true"></tr>
-				<tr cdk-row *cdkRowDef="let team; columns: displayedColumns"></tr>
+				<tr cdk-header-row *cdkHeaderRowDef="displayedColumns(); sticky: true"></tr>
+				<tr cdk-row *cdkRowDef="let team; columns: displayedColumns()"></tr>
 			</table>
 
 			<asy-table-empty-state
