--- a/src/app/core/messages/recent-messages/recent-messages.component.html
+++ b/src/app/core/messages/recent-messages/recent-messages.component.html
@@ -44,7 +44,7 @@
 			View All
 		</button>
 	</div>
-} @else if (!loading) {
+} @else if (!loading()) {
 	<div class="text-center">
 		<h2 class="mt-4">You're all caught up!</h2>
 		<p class="mb-4">You don't have any new notifications.</p>
