--- a/src/app/core/admin/user/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user/list-users/admin-list-users.component.html
@@ -149,8 +149,8 @@
 						</ng-template>
 					</td>
 				</ng-container>
-				<tr cdk-header-row *cdkHeaderRowDef="displayedColumns; sticky: true"></tr>
-				<tr cdk-row *cdkRowDef="let team; columns: displayedColumns"></tr>
+				<tr cdk-header-row *cdkHeaderRowDef="displayedColumns(); sticky: true"></tr>
+				<tr cdk-row *cdkRowDef="let team; columns: displayedColumns()"></tr>
 			</table>
 
 			<asy-table-empty-state
