--- a/src/app/core/eua/user-eua.component.html
+++ b/src/app/core/eua/user-eua.component.html
@@ -40,7 +40,7 @@
 							<button
 								class="btn btn-primary"
 								type="submit"
-								[disabled]="!agree"
+								[disabled]="!agree()"
 								(click)="accept()"
 							>
 								Submit Acknowledgement
