--- a/src/app/core/help/getting-started/external-links.component.html
+++ b/src/app/core/help/getting-started/external-links.component.html
@@ -1,5 +1,5 @@
 <ul>
-	@for (link of links; track link) {
+	@for (link of links(); track link) {
 		<li>
 			<a href="{{ link.href }}" target="_blank" (click)="handleLinkClick($event)">{{
 				link.title
